--- a/config/drone_config.yaml
+++ b/config/drone_config.yaml
@@ -1,29 +1,1 @@
-drones:
-- drone_id: 0
-  initial_position: [0.0, 0.0, 2.0]
-  max_velocity: 20.0
-  max_acceleration: 20.0
-- drone_id: 1
-  initial_position: [3.0, 0.0, 2.0]
-  max_velocity: 20.0
-  max_acceleration: 20.0
-- drone_id: 2
-  initial_position: [6.0, 0.0, 2.0]
-  max_velocity: 20.0
-  max_acceleration: 20.0
-- drone_id: 3
-  initial_position: [9.0, 0.0, 2.0]
-  max_velocity: 20.0
-  max_acceleration: 20.0
-- drone_id: 4
-  initial_position: [12.0, 0.0, 2.0]
-  max_velocity: 20.0
-  max_acceleration: 20.0
-- drone_id: 5
-  initial_position: [0.0, 3.0, 2.0]
-  max_velocity: 20.0
-  max_acceleration: 20.0
-- drone_id: 6
-  initial_position: [3.0, 3.0, 2.0]
-  max_velocity: 20.0
-  max_acceleration: 20.0
+drones: []
