Aggiunta seconda interfaccia offline -> funzionante unito a parte Predieri

--- a/config/drone_config.yaml
+++ b/config/drone_config.yaml
@@ -1,1 +1,201 @@
-drones: []
+drones:
+- drone_id: 0
+  initial_position: [0.0, 0.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 1
+  initial_position: [3.0, 0.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 2
+  initial_position: [6.0, 0.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 3
+  initial_position: [9.0, 0.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 4
+  initial_position: [12.0, 0.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 5
+  initial_position: [0.0, 3.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 6
+  initial_position: [3.0, 3.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 7
+  initial_position: [6.0, 3.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 8
+  initial_position: [9.0, 3.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 9
+  initial_position: [12.0, 3.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 10
+  initial_position: [0.0, 6.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 11
+  initial_position: [3.0, 6.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 12
+  initial_position: [6.0, 6.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 13
+  initial_position: [9.0, 6.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 14
+  initial_position: [12.0, 6.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 15
+  initial_position: [0.0, 9.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 16
+  initial_position: [3.0, 9.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 17
+  initial_position: [6.0, 9.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 18
+  initial_position: [9.0, 9.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 19
+  initial_position: [12.0, 9.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 20
+  initial_position: [0.0, 12.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 21
+  initial_position: [3.0, 12.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 22
+  initial_position: [6.0, 12.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 23
+  initial_position: [9.0, 12.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 24
+  initial_position: [12.0, 12.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 25
+  initial_position: [0.0, 15.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 26
+  initial_position: [3.0, 15.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 27
+  initial_position: [6.0, 15.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 28
+  initial_position: [9.0, 15.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 29
+  initial_position: [12.0, 15.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 30
+  initial_position: [0.0, 18.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 31
+  initial_position: [3.0, 18.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 32
+  initial_position: [6.0, 18.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 33
+  initial_position: [9.0, 18.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 34
+  initial_position: [12.0, 18.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 35
+  initial_position: [0.0, 21.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 36
+  initial_position: [3.0, 21.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 37
+  initial_position: [6.0, 21.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 38
+  initial_position: [9.0, 21.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 39
+  initial_position: [12.0, 21.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 40
+  initial_position: [0.0, 24.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 41
+  initial_position: [3.0, 24.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 42
+  initial_position: [6.0, 24.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 43
+  initial_position: [9.0, 24.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 44
+  initial_position: [12.0, 24.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 45
+  initial_position: [0.0, 27.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 46
+  initial_position: [3.0, 27.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 47
+  initial_position: [6.0, 27.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 48
+  initial_position: [9.0, 27.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
+- drone_id: 49
+  initial_position: [12.0, 27.0, 2.0]
+  max_velocity: 20.0
+  max_acceleration: 20.0
